...
    <!--Integrity violations screen-->
    <string name="screen_violations_header">Secure Messaging is not available. We believe that this device might not be secure.</string>
    <string name="screen_violations_dismiss_and_ignore_explanation">If you believe these are false-positives, you can ignore this warning for this session using the button below.</string>
    <string name="screen_violations_dismiss_button">Dismiss and ignore warnings</string>

    <!--How this works screen-->
    <string name="screen_how_this_works_header">How this works</string>
    <string name="screen_how_this_works_continue">Continue</string>
    <string name="screen_how_this_works_set_up_my_passphrase">Set up my passphrase</string>
    <string name="screen_how_this_works_pager1_title">Send a message</string>
    <string name="screen_how_this_works_pager1_content">Your message will be sent anonymously and securely to a journalist or team. It will be encrypted and indistinguishable from the Guardian app\'s regular network activity.</string>
    <string name="screen_how_this_works_pager2_title">Check back for a response</string>
    <string name="screen_how_this_works_pager2_content">Our journalists check for new messages regularly. If they wish to take your story further they will respond here.</string>
    <string name="screen_how_this_works_pager3_title">Memorise your passphrase</string>
    <string name="screen_how_this_works_pager3_content">Shortly you will be given a unique passphrase. Use this to access your conversation. Please memorise it or record it somewhere secure.</string>

    <!--New session screen-->
    <string name="screen_new_session_help_banner_keeping_passphrases_safe">Keeping passphrases safe</string>
    <string name="screen_new_session_help_banner_learn_more">Learn more</string>
    <string name="screen_new_session_button_already_have_passphrase">I already have a passphrase</string>
...
    <string name="screen_new_message_text_desc_who_would_you_like_to_contact">Your message is reviewed by journalists</string>
    <string name="screen_new_message_text_recipient_loading">loading…</string>
    <string name="screen_new_message_text_recipient_change">Change</string>
    <string name="screen_new_message_text_no_recipient_selected">no recipient selected</string>
    <string name="screen_new_message_text_your_message">What\'s your message?</string>
    <string name="screen_new_message_text_your_message_description">See ‘Compose your first message’ for advice</string>
    <string name="screen_new_message_button_send_message">Send message</string>
    <string name="screen_new_message_error_forced_recipient">At the current time you can only contact a single Guardian recipient.</string>
    <string name="screen_new_message_error_no_recipient_selected">No recipient selected.</string>
    <string name="screen_new_message_error_message_empty">The message is empty.</string>
    <string name="screen_new_message_error_message_too_long">The message is too long.</string>
    <string name="screen_new_message_error_cannot_send_unknown_error">Failed to create a new conversation. Please exit Secure Messaging and try again later—or try using a different phone.</string>
    <string name="screen_new_message_exit_dialog_title">Leaving your message vault</string>
...
    <string name="screen_inbox_text_no_messages_last_x_days" tools:ignore="PluralsCandidate">You have no messages to show from the last %1d days.</string>

    <!--Conversation screen-->
    <string name="screen_conversation_pending">Your message is now queued up for secure transmission within routine Guardian app activity. We recommend that you exit Secure Messaging and wait for a response before you send another message.</string>
    <string name="screen_conversation_sent">Your message has been sent. We recommend that you wait for a response before you send another message.</string>
    <string name="screen_conversation_empty">There are no messages in this conversation. This might be because they expired after 14 days and have been automatically deleted.</string>
    <string name="screen_conversation_button_send_new">Send a new message</string>
    <string name="screen_conversation_heading_secure_conversation">Secure chat with %1$s</string>

    <!--Component : strapline header with explanation-->
    <string name="component_strapline_content_explanation">The Guardian Secure Messaging service was developed to allow you to share stories with us securely and privately using strong encryption. \n\nIt is designed to prevent others from even knowing you are in communication with us.</string>
    <string name="component_strapline_header_part_1">Send us a message</string>
    <string name="component_strapline_header_part_2">securely</string>
...
