...
        if (!messagesBelow) WarningMessages(percentFull, messagesBelow)

        LinearProgressIndicator(
            modifier = Modifier
                .fillMaxWidth()
                .height(4.dp)
                .testTag("message_limit_indicator"),
            backgroundColor = Color.LightGray,
            color = if (percentFull > 1.0f) WarningPastelRed else PrimaryYellow,
            progress = percentFull
        )

        if (messagesBelow) WarningMessages(percentFull, messagesBelow)
...
